--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     /* Basic Options */
     "target": "es6",
-    "module": "es6",
+    "module": "none",
     "declaration": false,
     "sourceMap": false,
     "rootDir": "./generator",
